# SqlAnalyzer

./: .gitmodules  AGENT.md  PLAN.md  README.md  package.json  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: tauri-build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  vault.rs
src/components/: PageNav.vue  Pev2Plan.vue  PlanComparePanel.vue  PlanConnectionModal.vue  PlanDocPanel.vue  PlanGraph.vue  PlanHistoryPanel.vue  PlanImportModal.vue  PlanInsightPanel.vue  PlanNodeDetails.vue  PlanNodeTooltip.vue  PlanRunnerPanel.vue  PlanTimeline.vue  PlanToolbar.vue  PlanTree.vue  PlanTreeNode.vue
src/modules/: insights.ts  planFactory.ts  planModel.ts  planParser.ts  planSamples.ts
src/router/: index.ts
src/services/: aiInsightStorage.ts  aiInsights.ts  aiSettings.ts  dbSettings.ts  historyStorage.ts  i18n.ts  nodeDocs.ts  planBridge.ts  themeSettings.ts
src/stores/: planStore.ts
src/styles/: index.css
src/views/: HistoryWorkspace.vue  PlanWorkspace.vue  RunnerWorkspace.vue  SettingsHub.vue
